--- a/spring-reactive/pom.xml
+++ b/spring-reactive/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <groupId>max.lab</groupId>
-    <artifactId>reactive-springl</artifactId>
+    <artifactId>reactive-spring</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>reactive-spring</name>
     <description>The project for the reactive Spring tutorial</description>
