--- a/springcloud-example/springcloud-eureka-seata/eureka/pom.xml
+++ b/springcloud-example/springcloud-eureka-seata/eureka/pom.xml
@@ -4,10 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>springcloud-eureka-seata</artifactId>
-        <groupId>com.joyobpo</groupId>
+        <groupId>io.seata</groupId>
         <version>1.1.0</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
     <artifactId>eureka</artifactId>
 
