--- a/springcloud-example/springcloud-eureka-seata/storage/pom.xml
+++ b/springcloud-example/springcloud-eureka-seata/storage/pom.xml
@@ -4,13 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>springcloud-eureka-seata</artifactId>
-        <groupId>com.joyobpo</groupId>
+        <groupId>io.seata</groupId>
         <version>1.1.0</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>storage</artifactId>
 
-    <artifactId>account</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -22,14 +21,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-sleuth</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
