--- a/spring-reactive/pom.xml
+++ b/spring-reactive/pom.xml
@@ -3,19 +3,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>seata-samples</artifactId>
-        <groupId>io.seata</groupId>
-        <version>1.1.0</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.0.RELEASE</version>
+        <relativePath/>
     </parent>
 
     <groupId>max.lab</groupId>
     <artifactId>reactive-spring</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>reactive-spring</name>
+    <name>spring-reactive</name>
     <description>The project for the reactive Spring tutorial</description>
 
+
     <properties>
-        <java.version>13</java.version>
+        <java.version>8</java.version>
         <spring-cloud.version>Hoxton.SR4</spring-cloud.version>
     </properties>
 
@@ -108,6 +110,17 @@
         </dependency>
     </dependencies>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
@@ -117,5 +130,20 @@
             </plugin>
         </plugins>
     </build>
+
+    <!--	<repositories>-->
+    <!--		<repository>-->
+    <!--			<id>spring-milestones</id>-->
+    <!--			<name>Spring Milestones</name>-->
+    <!--			<url>https://repo.spring.io/milestone</url>-->
+    <!--		</repository>-->
+    <!--	</repositories>-->
+    <!--	<pluginRepositories>-->
+    <!--		<pluginRepository>-->
+    <!--			<id>spring-milestones</id>-->
+    <!--			<name>Spring Milestones</name>-->
+    <!--			<url>https://repo.spring.io/milestone</url>-->
+    <!--		</pluginRepository>-->
+    <!--	</pluginRepositories>-->
 
 </project>
